infrastructure/gitops/infrastructure/neo4j/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    app.kubernetes.io/name: database
    name: database
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.34
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.34
