infrastructure/gitops/infrastructure/neo4j/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neo4j
  namespace: database
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: database-authentik-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - neo4j.almckay.io
      secretName: neo4j-tls  # pragma: allowlist secret
  rules:
    - host: neo4j.almckay.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neo4j
                port:
                  number: 7474
